[gd_scene load_steps=5 format=3 uid="uid://d4cqt8aebdgp6"]

[ext_resource type="Script" path="res://actors/ammo_dispenser.gd" id="1_684q7"]
[ext_resource type="PackedScene" uid="uid://deolao8vjrspu" path="res://props/vendingmachine.tscn" id="2_2y5yx"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_njkio"]
data = PackedVector3Array(-1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1, -1, -1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, 1, 1, 1, -1, 1, 1, -9.4436, 2.2343, 6.9697, -9.4436, -9.9049, -1.8612, -9.4436, -9.9049, 6.9697, -9.4436, 2.2343, 6.9697, -9.4436, 2.2343, -1.8612, -9.4436, -9.9049, -1.8612, -9.4436, 2.2343, -1.8612, -0.1171, -9.9049, -1.8612, -9.4436, -9.9049, -1.8612, -9.4436, 2.2343, -1.8612, -0.1171, 2.2343, -1.8612, -0.1171, -9.9049, -1.8612, -0.1171, 2.2343, -1.8612, -0.1171, -9.9049, 6.9697, -0.1171, -9.9049, -1.8612, -0.1171, 2.2343, -1.8612, -0.1171, 2.2343, 6.9697, -0.1171, -9.9049, 6.9697, -0.1171, 2.2343, 6.9697, -9.4436, -9.9049, 6.9697, -0.1171, -9.9049, 6.9697, -0.1171, 2.2343, 6.9697, -9.4436, 2.2343, 6.9697, -9.4436, -9.9049, 6.9697, -9.4436, 2.2343, -1.8612, -0.1171, 2.2343, 6.9697, -0.1171, 2.2343, -1.8612, -9.4436, 2.2343, -1.8612, -9.4436, 2.2343, 6.9697, -0.1171, 2.2343, 6.9697, -0.1171, -9.9049, -1.8612, -9.4436, -9.9049, 6.9697, -9.4436, -9.9049, -1.8612, -0.1171, -9.9049, -1.8612, -0.1171, -9.9049, 6.9697, -9.4436, -9.9049, 6.9697, -1, -0.9688, 5.4538, -1, 0.3163, 1.9526, -1, 0.3163, 5.4538, -1, -0.9688, 5.4538, -1, -0.9688, 1.9526, -1, 0.3163, 1.9526, -1, -0.9688, 1.9526, 1, 0.3163, 1.9526, -1, 0.3163, 1.9526, -1, -0.9688, 1.9526, 1, -0.9688, 1.9526, 1, 0.3163, 1.9526, 1, -0.9688, 1.9526, 1, 0.3163, 5.4538, 1, 0.3163, 1.9526, 1, -0.9688, 1.9526, 1, -0.9688, 5.4538, 1, 0.3163, 5.4538, 1, -0.9688, 5.4538, -1, 0.3163, 5.4538, 1, 0.3163, 5.4538, 1, -0.9688, 5.4538, -1, -0.9688, 5.4538, -1, 0.3163, 5.4538, -1, -0.9688, 1.9526, 1, -0.9688, 5.4538, 1, -0.9688, 1.9526, -1, -0.9688, 1.9526, -1, -0.9688, 5.4538, 1, -0.9688, 5.4538, 1, 0.3163, 1.9526, -1, 0.3163, 5.4538, -1, 0.3163, 1.9526, 1, 0.3163, 1.9526, 1, 0.3163, 5.4538, -1, 0.3163, 5.4538, -1, -9.1206, 5.9074, -1, -1.9022, 0.3215, -1, -1.9022, 5.9074, -1, -9.1206, 5.9074, -1, -9.1206, 0.3215, -1, -1.9022, 0.3215, -1, -9.1206, 0.3215, 1, -1.9022, 0.3215, -1, -1.9022, 0.3215, -1, -9.1206, 0.3215, 1, -9.1206, 0.3215, 1, -1.9022, 0.3215, 1, -9.1206, 0.3215, 1, -1.9022, 5.9074, 1, -1.9022, 0.3215, 1, -9.1206, 0.3215, 1, -9.1206, 5.9074, 1, -1.9022, 5.9074, 1, -9.1206, 5.9074, -1, -1.9022, 5.9074, 1, -1.9022, 5.9074, 1, -9.1206, 5.9074, -1, -9.1206, 5.9074, -1, -1.9022, 5.9074, -1, -9.1206, 0.3215, 1, -9.1206, 5.9074, 1, -9.1206, 0.3215, -1, -9.1206, 0.3215, -1, -9.1206, 5.9074, 1, -9.1206, 5.9074, 1, -1.9022, 0.3215, -1, -1.9022, 5.9074, -1, -1.9022, 0.3215, 1, -1.9022, 0.3215, 1, -1.9022, 5.9074, -1, -1.9022, 5.9074, -1, -8.7019, -1.2643, -1, -1.9108, -0.1523, -1, -8.7019, -0.1523, -1, -8.7019, -1.2643, -1, -1.9108, -1.2643, -1, -1.9108, -0.1523, -1, -1.9108, -1.2643, 1, -1.9108, -0.1523, -1, -1.9108, -0.1523, -1, -1.9108, -1.2643, 1, -1.9108, -1.2643, 1, -1.9108, -0.1523, 1, -1.9108, -1.2643, 1, -8.7019, -0.1523, 1, -1.9108, -0.1523, 1, -1.9108, -1.2643, 1, -8.7019, -1.2643, 1, -8.7019, -0.1523, 1, -8.7019, -1.2643, -1, -8.7019, -0.1523, 1, -8.7019, -0.1523, 1, -8.7019, -1.2643, -1, -8.7019, -1.2643, -1, -8.7019, -0.1523, -1, -1.9108, -1.2643, 1, -8.7019, -1.2643, 1, -1.9108, -1.2643, -1, -1.9108, -1.2643, -1, -8.7019, -1.2643, 1, -8.7019, -1.2643, 1, -1.9108, -0.1523, -1, -8.7019, -0.1523, -1, -1.9108, -0.1523, 1, -1.9108, -0.1523, 1, -8.7019, -0.1523, -1, -8.7019, -0.1523)

[sub_resource type="BoxShape3D" id="BoxShape3D_csm3b"]
size = Vector3(0.919901, 1.6627, 1.45586)

[node name="AmmoDispenser" type="StaticBody3D"]
script = ExtResource("1_684q7")
AmmoToDispense = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.0536107, 0, 0, 0, -0.123567, 0, 0, 0, 0.142806, 0.256275, 0.276079, -0.364761)
shape = SubResource("ConcavePolygonShape3D_njkio")

[node name="DispenserCooldown" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="DispenseArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DispenseArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.783937, 0)
shape = SubResource("BoxShape3D_csm3b")

[node name="vendingmachine" parent="." instance=ExtResource("2_2y5yx")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-0.0818863, 0, -0.996642, 0, 1, 0, 0.996642, 0, -0.0818863, 0, 0.935399, 0)
light_color = Color(0.458824, 0.294118, 0.156863, 1)
light_energy = 2.287

[connection signal="timeout" from="DispenserCooldown" to="." method="_on_dispenser_cooldown_timeout"]
[connection signal="body_entered" from="DispenseArea" to="." method="_on_dispense_area_body_entered"]

[editable path="vendingmachine"]
